fix: fix doc font-family issue on firefox

--- a/src/styles/doc.sass
+++ b/src/styles/doc.sass
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap')
+    
 .prose pre
     background-color: #F2F7F9
     color: #374151
@@ -9,7 +11,7 @@ code
     line-height: 150%
 
 p
-    font-family: "Roboto"
+    font-family: "Roboto", sans-serif
 
 a
     color: #157684
